extension/src/form.css
table {
    border-collapse: collapse;
}

.header {
    padding: 20px;
    font-family: "Product Sans", Roboto, Arial, sans-serif;
    font-weight: normal;
    font-size: 150%;
    text-align: center;
    background-color: #1871E8;
    color: #fff;
}

.category1 {
    padding: 10px 10px 15px 15px;
    font-family: Roboto, Arial, sans-serif;
    font-weight: normal;
    font-size: medium;
    text-align: left;
    color: #000;
}

.category {
    padding: 10px 10px 10px 15px;
    font-family: Roboto, Arial, sans-serif;
    font-weight: normal;
    font-size: medium;
    text-align: left;
    color: #000;
}

.star-rating:not(old) {
    display        : inline-block;
    width          : 7.5em;
    height         : 1.5em;
    overflow       : hidden;
    vertical-align : bottom;
}

.star-rating:not(old) > input {
    margin-right : -100%;
    opacity      : 0;
}

.star-rating:not(old) > label {
    display         : block;
    float           : right;
    position        : relative;
    background      : url('./images/star-off.png');
    background-size : contain;
}

.star-rating:not(old) > label:before {
    content         : '';
    display         : block;
    width           : 1.5em;
    height          : 1.5em;
    background      : url('./images/star-on.png');
    background-size : contain;
    opacity         : 0;
    transition      : opacity 0.2s linear;
}

.star-rating:not(old) > label:hover:before,
.star-rating:not(old) > label:hover ~ label:before,
.star-rating:not(:hover) > :checked ~ label:before {
    opacity : 1;
}

input[type=submit] {
    padding: 5px 15px;
    background: #1871E8;
    color: #fff;
    font-family: "Product Sans", Roboto, Arial, sans-serif;
    font-size: 150%;
    border: 0 none;
    cursor: pointer;
    -webkit-border-radius: 10px;
    border-radius: 10px;
}

